DemoMyApp/src/objects/Finance_Transactions__c.object
<CustomObject>
    <fields>
        <fullName>Action_Code__c</fullName>
        <label>Action Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Received_New__c</fullName>
        <label>Amount Received New</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <label>Amount Received</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Last_4__c</fullName>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Error Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <label>Finance</label>
        <referenceTo>Opportunity_Finance__c</referenceTo>
        <relationshipLabel>Finance Transactions</relationshipLabel>
        <relationshipName>Finance_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes_or_Comments__c</fullName>
        <label>Notes or Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Applicant_Name__c</fullName>
        <formula>Finance__r.Opportunity__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_Application_Fee_Due__c</fullName>
        <formula>Finance__r.Opportunity__r.Program__r.Application_Fee_Lookup__r.Application_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Application Fee Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Deposit_Amount_Du__c</fullName>
        <formula>IF( ISPICKVAL(Transaction_Type__c,&quot;Confirmation Deposit&quot;),  Finance__r.Opportunity__r.Program__r.Confirmation_Deposit__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Deposit Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_Transaction_Method_Index__c</fullName>
        <formula>IF(  
   (Text(Transaction_Status__c) = &quot;Success&quot;||Text(Transaction_Status__c) = &quot;Manually Processed&quot;), 
   (CASE( 
        Transaction_Method__c , &quot;CC Charged Via Salesforce&quot;, 1, &quot;CC Charged via HK&quot;, 2,&quot;Wire Transfer&quot;,3,&quot;Manual Credit Card&quot;,4,0)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OP:Transaction Method Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <formula>Finance__r.Student_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Transaction Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Method__c</fullName>
        <label>Transaction Method</label>
        <picklist>
            <picklistValues>
                <fullName>CC Charged Via Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC Charged via HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Top Apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PaytoStudy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Performed_By__c</fullName>
        <formula>CreatedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Performed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_State__c</fullName>
        <label>Transaction State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction Timed Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmation Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuition Fee Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writeoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PtS 1st Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PtS 2nd Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Finance Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Amount_Received__c</columns>
        <columns>Transaction_Method__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Finance__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <columns>Error_Text__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FTN-{000000}</displayFormat>
        <label>Finance Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>